# daily-tasks

./: .coverage  .gitignore  requirements.txt
day-3/: async_fetch.py
logs/: app.json
python_advanced/: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
python_advanced/src/python_advanced/: __init__.py
python_advanced/src/python_advanced/async_utils/: __init__.py  fetch.py
python_advanced/src/python_advanced/context/: __init__.py  managers.py
python_advanced/src/python_advanced/core/: __init__.py  exceptions.py  logging_config.py  settings.py
python_advanced/src/python_advanced/decorators/: __init__.py  api.py  utils.py
python_advanced/src/python_advanced/performance/: __init__.py  optimization.py
python_advanced/src/python_advanced/pipeline/: __init__.py  generators.py
python_advanced/src/python_advanced/strategy/: __init__.py  chunker.py
python_advanced/src/python_advanced/validation/: __init__.py  models.py
python_advanced/tests/: conftest.py  test_async_utils.py  test_context.py  test_core.py  test_decorators.py  test_performance.py  test_pipeline.py  test_strategy.py  test_validation.py
week-1/day-1/: typed_module.py
week-1/day-2/: decorators.py
week-1/day-3/: async_fetch.py
week-1/day-4/: generator_pipeline.py
week-1/day-5/: context_and_descriptors.py
week-2/day-1/: chunker_strategy.py
week-2/day-6/: chunker_strategy.py  test_chunker.py
week-2/day-8/: exceptions.py  logging_config.py  settings.py
week-2/day-9/: optimised_function.py  profiling_report.md  slow_pipeline.py
week-3/app/: main.py
week-3/app/routers/: documents.py
week-3/day-1/app/schemas/: document.py
week-3/day-1/app/services/: document_service.py
week-3/day-2/: dependencies.py  main.py
week-3/day-3/: async_routes.py
week-3/day-4/: validates_api.py
week-3/day-5/: auth_api.py
week-4/day-1/app/: alembic.ini  routes.py
week-4/day-1/app/alembic/: env.py
week-4/day-1/app/alembic/versions/: b0b75c304f66_update_user_fields.py  e9e31224d492_create_users_table.py
week-4/day-1/app/db/: database.py  models.py  repository.py
