[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-advanced"
version = "1.0.0"
description = "A comprehensive Python package demonstrating advanced concepts: type hints, async, generators, decorators, design patterns, and performance optimization"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Quality Tech", email = "dev@qualtech.com" }
]
keywords = ["python", "async", "type-hints", "decorators", "design-patterns", "optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic[dotenv]>=2.0",
    "loguru>=0.7.0",
    "aiohttp>=3.8.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.7.0",
    "ruff>=0.0.280",
    "mypy>=1.4.0",
    "pre-commit>=3.3.0",
    "memory-profiler>=0.61.0",
    "line-profiler>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/qualtech/python-advanced"
Repository = "https://github.com/qualtech/python-advanced"
Documentation = "https://github.com/qualtech/python-advanced#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/python_advanced"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/.pre-commit-config.yaml",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C4",     # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by black)
    "ARG001", # unused positional argument
    "ARG002", # unused positional argument
]
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.isort]
known-first-party = ["python_advanced"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
exclude = [
    ".venv",
    "build",
    "dist",
]

[[tool.mypy.overrides]]
module = "aiohttp.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "--strict-markers --tb=short -v --cov=src/python_advanced --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "async: marks tests as async",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/python_advanced"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "^\\s*\\.\\.\\.\\s*$",
]
precision = 2
show_missing = true
skip_covered = false
